move memory bus out from cpu

--- a/impls/cpu.16bit.1p/demo.html
+++ b/impls/cpu.16bit.1p/demo.html
@@ -19,6 +19,7 @@
   <script language="javascript" src="/visualization/dec-display.js"></script>
   <script language="javascript" src="/visualization/tracer.js"></script>
   <script language="javascript" src="/scaffold/helpers.js"></script>
+  <script language="javascript" src="/fake/fake-rwmemory.js"></script>
   <script language="javascript" src="./cpu.16bit.1p.js"></script>
   <script language="javascript">
   function Onload( ) {
@@ -36,32 +37,24 @@
       CreateInputSwitch( 0, "signalPanel", '+4', simulator ),
     ];
     var cpu = new Cpu16Bit1P( clk, reset, start, "cpu" );
+    var initial_bytes = [];
+    for( var i = 0 ; i < 256 ; i++ ) {initial_bytes.push( i );}
+    var mem = new FakeRWMemory( cpu.ADDR_WIDTH, cpu.MEM_READ_WIDTH / 8, "64k.mem", initial_bytes ); 
+    cpu.connect_memory( mem );
     window.cpu = cpu;
-    //test
-    var init_size = 128*8;
-    var init_values = [];
-    for( var i = 0 ; i < init_size / 8 ; i++ ) {
-      for( var j = 0 ; j < 8 ; j++ ) {
-        if( (i & (1<<j)) ) {
-          init_values.push( SIG_ONE );
-        } else {
-          init_values.push( SIG_ZERO );
-        }
-      }
-    }
-    for( var i = 0 ; i < init_size / 8 ; i++ ) {
-      cpu.bind_read_address( i, init_values.slice( i*8, i*8+32 ) );
-    }
 
     Add2Simulator( simulator, cpu.network );
+    Add2Simulator( simulator, mem.network );
     loop.register_monitor( tm );
     loop.register_monitor( new DecimalDisplay( cpu.IP.map( (x)=>x.get_output_endpoint() ), false, "digitPanel", "IP:" ) );
     loop.register_monitor( new DecimalDisplay( cpu.simple_next_ip, false, "digitPanel", "IP+4: " ) );
     loop.register_monitor( new DecimalDisplay( cpu.conn_IP_input, false, "digitPanel", "next_IP: " ) );
     loop.register_monitor( new DecimalDisplay( cpu.select_next_ip, false, "digitPanel", "selected_IP: " ) );
-    loop.register_monitor( new DecimalDisplay( cpu.memory_reading_decoder_address.get_output_endpoints(), false, "digitPanel", "mem_read_addr: " ) );
+    loop.register_monitor( new DecimalDisplay( cpu.ms_memory_addr.get_output_endpoints(), false, "digitPanel", "mem_read_addr: " ) );
     loop.register_monitor( new DecimalDisplay( cpu.instruction_input, false, "digitPanel", "instruction_input: " ) );
-    loop.register_monitor( new DecimalDisplay( cpu.instruction.map( (x) => x.get_output_endpoint() ).slice(0,8), false, "digitPanel", "instruction: " ) );
+    loop.register_monitor( new DecimalDisplay( cpu.instruction.map( (x) => x.get_output_endpoint() ), false, "digitPanel", "instruction: ", true ) );
+    loop.register_monitor( new DecimalDisplay( cpu.instruction.slice(0,3).map( (x) => x.get_output_endpoint() ), false, "digitPanel", "instruction(cycle): " ) );
+    loop.register_monitor( new DecimalDisplay( cpu.conn_cmd_cycle, false, "digitPanel", "cycle: " ) );
     //loop.register_monitor( screen );
     var sm = cpu.state_machine;
     function update( )
@@ -79,6 +72,7 @@
       mon_sigs.push( sm.get_output_endpoint_of_is_state( "EXEC_" + i ));
     }
     mon_sigs.push( sm.get_output_endpoint_of_is_state( "STORE" ));
+    cpu.instruction.slice(0,8).map( (x) => { mon_sigs.push( x.get_output_endpoint() ) } );
     }
     setInterval( update, loop.frame_in_ms );
     loop.start();
