--- a/impls/cpu.16bit.1p/demo.html
+++ b/impls/cpu.16bit.1p/demo.html
@@ -26,16 +26,16 @@
   class Impl {
     constructor( clock ) {
       this.clock = clock;
-      this.reset = new Signal(0, "reset");
+      this.reset = new Signal(1, "reset");
       this.start = new Signal(0, "start");
       this.cpu = new Cpu16Bit1P( this.clock, this.reset, this.start, "cpu" );
       var initial_bytes = [
       //cccaasss   ddxxxxxx ...
-       '00000000','00000000', 0xaa, 0xa0, // move 0xaa -> ax
-       '00000000','01000000', 0xbb, 0xb0, // move 0xbb -> bx
-       '00000000','10000000', 0, 0xaa, // move ax -> mem[0xaa] mem[0xaa+1]
-       '00000000','11000000', 0, 0xbb, // move bx -> mem[0xbb] mem[0xbb+1]
-       '00000111','11111111', 0, 0, //EXIT
+      "00000100", "00000000", 0, 4, // cycle 1, opr <- imm, moving data, res->ax, iopr 1024
+"00000100", "01000000", 0, 8, // cycle 1, opr <- imm, moving data, res->bx, iopr 2048
+"00000100", "10000000", 0, 8, // cycle 1, opr <- imm, moving data, ax ->mem[opr], iopr 2048
+"00000100", "11000000", 0, 4, // cycle 1, opr <- imm, moving data, bx ->mem[opr], iopr 1024
+"00000101", "01000000", 2, 0, // cycle 1, opr <- imm, end, res->bx, iopr 2
       ].map( (x) => {
         if( typeof(x) === 'string' ) {
           return parseInt(x.split('').reverse().join(''),2)
@@ -71,12 +71,19 @@
     get_watch_sigs( ) {
       return [
         this.cpu.ms_memory_en.get_output_endpoints()[0],
+        this.mem.get_enable_endpoint(),
+        this.mem.get_init_endpoint(),
         this.sm.get_output_endpoint_of_is_state( "INIT" ),
         this.sm.get_output_endpoint_of_is_state( "FETCH" ),
         this.sm.get_output_endpoint_of_is_state( "DECODE" ),
         this.sm.get_output_endpoint_of_is_state( "EXEC_0" ),
         this.sm.get_output_endpoint_of_is_state( "STORE" ),
         this.sm.get_output_endpoint_of_is_state( "END" ),
+        this.cpu.cmd_is_dm,
+        this.cpu.dm_load_to_ax,
+        this.cpu.dm_load_to_bx,
+        this.cpu.cmd_is_flow_control,
+        this.cpu.dm_to_mem,
       ];
     }
 
@@ -117,7 +124,7 @@
     var simulator = new Simulator( network, 0 );
     var tm = new TimeSequenceMonitor( mon_sigs, "timeseq", 768 );
     var screen = new PixelScreen( screen_sigs, "screen", SCREEN_WIDTH_IN_PX, SCREEN_HEIGHT_IN_PX, SCREEN_PIXEL_SIZE );
-    var loop = new MainLoop( simulator, 1, 20 );
+    var loop = new MainLoop( simulator, 1, 2 );
     loop.register_monitor( tm );
     loop.register_monitor( screen );
 
@@ -140,7 +147,7 @@
     }
     setInterval( update, loop.frame_in_ms );
 
-    //loop.start();
+    loop.start();
 
     var btnResume = document.getElementById("btnResume");
     btnResume.onclick = function() { loop.resume(); }
